Add Guacamole labs: DVWA browser lab and Advanced Pentest Lab with Kali VNC

--- a/.env.example
+++ b/.env.example
@@ -70,5 +70,5 @@ SECURE_COOKIES=False  # Set to True in production with HTTPS
 HTTPS_REDIRECT=False  # Set to True in production
 
 # Admin Defaults (used by seed scripts)
-ADMIN_EMAIL=admin@tygrsecacademy.com
-ADMIN_PASSWORD=ChangeThisSecurePassword123!
+# ADMIN_EMAIL=admin@tygrsecacademy.com
+# ADMIN_PASSWORD=ChangeThisSecurePassword123!
